Fix stylesheet.css with bold and center align

--- a/foundations/01-css-methods/style.css
+++ b/foundations/01-css-methods/style.css
@@ -2,4 +2,6 @@ div {
     background-color: red;
     color: white;
     font-size: 32px;
+    font-style: bold;
+    text-align: center;
 }
